# playdate-lib-template

./: .gitignore  CMakeLists.txt  Rakefile  compile_flags.txt.in
examples/: CMakeLists.txt  Rakefile
examples/simple/: main.c
include/: external.h
src/: lib.c  lib.h
test/: test_lib.c
